--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: hidden;
+}
+
 body {
   background-color: #282828;
   touch-action: manipulation;
@@ -7,6 +11,7 @@ body {
   margin: 20px 0;
   width: 100%;
   height: 100%;
+  position: fixed;
 }
 .media-control {
   box-sizing: border-box;
